ch10_render_hex_threadpool/target/debug/build/crossbeam-utils-098bf26f24da9b71/stderr
error[E0412]: cannot find type `AtomicU128` in module `core::sync::atomic`
    --> <anon>:1:38
     |
1    |   pub type Probe = core::sync::atomic::AtomicU128;
     |                                        ^^^^^^^^^^ help: a struct with a similar name exists: `AtomicU16`
     |
    ::: /home/sony/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/core/src/sync/atomic.rs:3082:1
     |
3082 | / atomic_int! {
3083 | |     cfg(target_has_atomic = "16"),
3084 | |     cfg(target_has_atomic_equal_alignment = "16"),
3085 | |     stable(feature = "integer_atomics_stable", since = "1.34.0"),
...    |
3097 | |     u16 AtomicU16
3098 | | }
     | |_- similarly named struct `AtomicU16` defined here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0412`.
